Segunda versão do notebook para práticas de processamento de imagens!

--- a/ImageProcessing.ipynb
+++ b/ImageProcessing.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "39067aed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "healthy =  '/home/EddyPerondini/Documentos/Projetos Pessoais/Imagens/test_healthy_124.jpeg'\n",
-    "cancer = '/home/EddyPerondini/Documentos/Projetos Pessoais/Imagens/test_cancer124.jpeg'"
+    "healthy =  'test_healthy_124.jpeg'\n",
+    "cancer = 'test_cancer124.jpeg'"
    ]
   },
   {
